Fix width issue on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,6 @@ h1#header a {
 #mobile-backdrop {
   z-index: 1;
   height: 100vh;
-  width: 100vh;
   display: none;
   background-color: #333333;
 }
